--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,10 @@
         ,"nodemon":"^2.0.7"
         ,"mysql2":"^2.2.5"
         ,"path":"^0.12.7"
+        , "sequelize": "^6.5.0"
+        ,"sqlite3":"^5.0.1"
+        ,"awilix": "^4.3.1"
+        
     }
 
 }
