--- a/website/package.json
+++ b/website/package.json
@@ -3,7 +3,7 @@
     ,"main": "index.js"
     ,"keywords": []
     ,"scripts": {
-        "start": "nodemon src/presentaion-layer/app.js"
+        "start": "nodemon --inspect=0.0.0.0 src/main.js -L"
     }
     , "dependencies": {
         "express": "^4.17.1"
@@ -16,7 +16,7 @@
         ,"nodemon":"^2.0.7"
         ,"mysql2":"^2.2.5"
         ,"path":"^0.12.7"
-        , "sequelize": "^6.5.0"
+        ,"sequelize": "^6.5.0"
         ,"sqlite3":"^5.0.1"
         ,"awilix": "^4.3.1"
     }
