a little changes for tomorrow

--- a/website/package.json
+++ b/website/package.json
@@ -1,9 +1,9 @@
 { "name" : "website"
-    , "version" : "1.0.0"
+    ,"version" : "1.0.0"
     ,"main": "index.js"
     ,"keywords": []
     ,"scripts": {
-        "start": "nodemon --inspect=0.0.0.0 src/main.js -L"
+        "start": "nodemon --inspect=0.0.0.0 src/main.js"
     }
     , "dependencies": {
         "express": "^4.17.1"
@@ -20,6 +20,5 @@
         ,"sqlite3":"^5.0.1"
         ,"awilix": "^4.3.1"
     }
-
 }
 
