--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - ./website/src:/the-website/src/
     depends_on: 
       - db
+      - redis
+    environment: 
+      DB_HOST: db
+      REDIS_HOST: redis
   db:
     build: ./db
     ports:
@@ -15,3 +19,10 @@ services:
     environment: 
       MYSQL_ROOT_PASSWORD: abc123
       MYSQL_DATABASE: hello
+  redis:
+    image: "redis"
+    ports:
+      - 6380:6380
+    
+    
+
