--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,23 +6,36 @@ services:
       - 8000:8000
     volumes: 
       - ./website/src:/the-website/src/
+    expose:
+      - 6379
     depends_on: 
       - db
       - redis
-    environment: 
+    environment:
       DB_HOST: db
       REDIS_HOST: redis
+    networks: 
+      - webnet
+
   db:
     build: ./db
     ports:
-    - 3306:3306
+      - 3306:3306
     environment: 
       MYSQL_ROOT_PASSWORD: abc123
       MYSQL_DATABASE: hello
+    networks:
+      - webnet
+
   redis:
     image: "redis"
-    ports:
-      - 6380:6380
+    ports: 
+      - 6379:6379
+    networks:
+      - webnet
+   
+networks:
+  webnet:
     
     
 
