--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
         ,"csurf": "^1.11.0"
         ,"express-session": "^1.17.1"
         ,"express-handlebars": "^5.2.0"
+        ,"cookie-parser": "^1.4.5"
         ,"nodemon": "^2.0.7"
         ,"mysql2": "^2.2.5"
         ,"path": "^0.12.7"
