--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     depends_on: 
       - db
       - redis
+      - pdb
     environment:
       DB_HOST: db
       REDIS_HOST: redis
@@ -32,6 +33,20 @@ services:
     ports: 
       - 6379:6379
     networks:
+      - webnet
+
+  pdb:
+    build: ./postgressDb
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: abc123
+      POSTGRES_DB: hello
+      POSTGRES_USERNAME: root
+
+    ports: 
+      - 5432:5432
+    networks: 
       - webnet
    
 networks:
